# FoamAdapter

./: .clang-format  .clang-tidy  .clang_format  .cmake-format.py  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  _typos.toml  build.sh  ci_build-and-test.sh  environment.yml  install_t8code.sh  pyproject.toml  searchindex.js  testcases.html
benchmarks/: CMakeLists.txt  bench_dsl.cpp  bench_explicitOperators.cpp  bench_implicitOperators.cpp  catch_main.hpp
benchmarks/benchmarkSuite/: cleanAll.sh  createStudies.py  gatherResults.py  runAll.sh
benchmarks/benchmarkSuite/dsl/: Snakefile  gatherResults.py  getResults.py  parameter_study.json  parastudy_2DSquare.csv  plotResults.py  runAll.sh
benchmarks/benchmarkSuite/explicitOperators/: Snakefile  createStudy.py  gatherResults.py  getResults.py  parameter_study.json  parastudy.csv  parastudy_3DCube.csv  plotResults.py
benchmarks/benchmarkSuite/implicitOperators/: Snakefile  config.yaml  createStudy.py  gatherResults.py  getResults.py  parameter_study.json  plotResults.py
benchmarks/benchmarks/: CMakeLists.txt  common.hpp  dsl.cpp  explicitOperators.cpp  implicitOperators.cpp
benchmarks/explicitOperators/: CMakeLists.txt  explicitOperators.cpp  implicitOperators.cpp
benchmarks/gradOperator/: CMakeLists.txt  createFields.H  gradOperator.cpp
benchmarks/matrixAssembly/: CMakeLists.txt  matrixAssembly.cpp
benchmarks/scalarAdvection/: CMakeLists.txt  FoamScalarAdvection.cpp  NeoFoamScalarAdvection.cpp  scalarAdvection.cpp
examples/: CMakeLists.txt
examples/heatTransfer/: CMakeLists.txt  createFields.H  heatTransfer.cpp
examples/icoNeoFoam/: CMakeLists.txt  createFields.H  createNFTime.H  icoNeoFoam.cpp
examples/neoIcoFoam/: CMakeLists.txt  createFields.H  createNFTime.H  neoIcoFoam.cpp
examples/scalarAdvection/: CMakeLists.txt  createFields.H  createNFTime.H  scalarAdvection.cpp  scalarFoamAdvection.cpp  scalarNeoFoamAdvection.cpp
examples/scalarAdvection/case/: Allrun
include/: CMakeLists.txt
include/FoamAdapter/: FoamAdapter.hpp  FoamAdapter.hpp.in  NeoFoam.hpp.in  comparison.hpp  expression.hpp  meshAdapter.hpp  readers.hpp  setup.hpp  writers.hpp
include/FoamAdapter/algorithms/: pressureVelocityCoupling.hpp
include/FoamAdapter/auxiliary/: comparison.hpp  convert.hpp  readers.hpp  setup.hpp  type_conversion.hpp  writers.hpp
include/FoamAdapter/comparision/: fieldComparision.hpp
include/FoamAdapter/comparison/: fieldComparison.hpp
include/FoamAdapter/compatibility/: fvSolution.hpp
include/FoamAdapter/conversion/: convert.hpp  fields.hpp  mesh.hpp  toNeoFOAM.hpp  type_conversion.hpp
include/FoamAdapter/datastructures/: expression.hpp  meshAdapter.hpp  runTime.hpp
include/FoamAdapter/mesh/: meshAdapter.hpp  neoMesh.hpp
include/FoamAdapter/readers/: foamBCFields.hpp  foamDictionary.hpp  foamFields.hpp  foamMesh.hpp
include/FoamAdapter/setup/: setup.hpp
include/FoamAdapter/treeAMR/: t8_MeshModifier.hpp
include/FoamAdapter/writers/: writers.hpp
include/NeoFOAM_GPL/conversion/: convert.hpp
include/NeoFOAM_GPL/readers/: foamFields.hpp  foamMesh.hpp
include/NeoFOAM_GPL/setup/: setup.hpp
include/NeoFOAM_GPL/treeAMR/: t8_MeshModifier.hpp
include/NeoFOAM_GPL/writers/: writers.hpp
src/: CMakeLists.txt  meshAdapter.cpp  setup.cpp
src/algorithms/: pressureVelocityCoupling.cpp
src/auxiliary/: comparison.cpp  convert.cpp  foamDictionary.cpp  setup.cpp  writers.cpp
src/benchmarks/: CMakeLists.txt
src/benchmarks/explicitOperators/: createFields.H  explicitOperators.cpp
src/benchmarks/gradOperator/: CMakeLists.txt  gradOperator.cpp
src/benchmarks/matrixAssembly/: createFields.H
src/benchmarks/scalarAdvection/: CMakeLists.txt  createFields.H  scalarAdvection.cpp
src/compatibility/: fvSolution.cpp
src/conversion/: convert.cpp  mesh.cpp  toNeoFOAM.cpp
src/datastructures/: foamMesh.cpp  meshAdapter.cpp
src/foamadapter/: __init__.py  __main__.py  cli.py
src/foamadapter/cli/: __main__.py  app.py
src/foamadapter/core/: __init__.py  plugin_system.py
src/foamadapter/foam_fields/: surfaceFields.py  volFields.py
src/foamadapter/inputs_files/: case_inputs.py  system.py
src/foamadapter/modules/: fields.py  models.py  setup.py  stability_criteria.py  transportModels.py
src/foamadapter/solver/: pimpleFoam.py
src/foamadapter/turbulence/: incompressible.py
src/framework/: __init__.py  controllers.py  dag.py  decorators.py  registry.py  runtime.py  scheduler.py
src/fvcc/mesh/: fvccNeoMesh.cpp
src/fvcc/surfaceInterpolation/: surfaceInterpolationFactory.cpp  surfaceInterpolations.cpp
src/mesh/: meshAdapter.cpp  neoMesh.cpp
src/readers/: foamDictionary.cpp  foamMesh.cpp
src/setup/: setup.cpp
src/test/: CMakeLists.txt  test_geometricFields.cpp  test_operators.cpp  test_unstructuredMesh.cpp
src/treeAMR/: treeAMRMesh.cpp  treeAMRMesh.hpp
test/: CMakeLists.txt  common.hpp  log  test_advection.cpp  test_cli.py  test_compatibility.cpp  test_geometricFields.cpp  test_implicitOperators.cpp  test_operators.cpp  test_pressureVelocityCoupling.cpp  test_readDict.cpp  test_sparsityPattern.cpp  test_stencils.cpp  test_unstructuredMesh.cpp
test/catch2/: CMakeLists.txt  common.hpp  executorGenerator.hpp  test_main.cpp
test/framework/: test_cross_domain_refs.py  test_dag.py  test_decorators.py  test_registry.py  test_scheduler_corrector.py  test_scheduler_order.py
test/modules/: __init__.py  test_fields.py  test_models.py  test_setup.py  test_visualization.py  utils_fields.py
test/plugin_system/: test_extensible_plugin_config.py
test/setup_advection/: Allrun
test/setup_advection/0.orig/: T
test/setup_advection/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
test/setup_compatibility/: Allrun
test/setup_compatibility/system/: fvSolution  simulationParameters
test/setup_operator/0/: T  divT_OpenMP  divT_Serial  gradT_OpenMP  gradT_Serial  ofDivT  ofGradT  phi
test/setup_stencil3D/: Allrun
test/setup_stencil3D/0/: T
test/turbulence/: test_incompressible.py
(+1944 files in other folders)
