[project]
name = "foamadapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henning Scheufler", email = "henning.scheufler@web.de" }
]
requires-python = ">=3.11"

dependencies = [
    "typer"
]

[project.scripts]
foamadapter = "foamadapter.cli.app:app"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --showlocals"
testpaths = [
    "test"
]

